gibbon-compiler/examples/error/test25c_racketcore.gib
#lang gibbon

(require "../../../ASTBenchmarks/grammar_racket.gib")

;; This can be run on any file from disk:
(define (foo [e : Toplvl]) : Int
  (case e
    ;; In a DIFFERENT order from the datadef:
    [(Expression x)                104]
    [(DefineValues   listSym expr) 101]
    [(DefineSyntaxes listSym expr) 102]
    [(BeginTop listToplvl)         103]
    ))
;[Expression Expr]

(foo (Expression (VARREF (quote hi))))
